<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/img_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF9090"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_nama"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@id/img_avatar"
        android:text="@string/nama"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_comp"
        android:layout_below="@id/txt_nama"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/img_avatar"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/comp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_lokasi"
        android:layout_below="@id/txt_comp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/img_avatar"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/lokasi" />

</RelativeLayout>